# bctoolbox

./: .gitlab-ci.yml  CMakeLists.txt  Makefile.am  README.md  bctoolbox.spec.in  configure.ac  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
cmake/: BCToolboxCMakeUtils.cmake  BcToolboxCMakeUtils.cmake  BcToolboxConfig.cmake.in  ConfigureSpecfile.cmake  FindMbedTLS.cmake
include/: CMakeLists.txt
include/bctoolbox/: charconv.h  crypto.h  crypto.hh  defs.h  ios_utils.hh  list.h  logging.h  param_string.h  port.h  tester.h  utils.hh  vfs_encrypted.hh
src/: CMakeLists.txt  Makefile.am  bc_vfs.c  param_string.c  parser.c  tester.c
src/containers/: list.c
src/conversion/: charconv.cc  charconv_android.cc  charconv_encoding.cc
src/crypto/: crypto.cc  ecc.cc  mbedtls-v2.c  mbedtls.c  mbedtls.cc
src/logging/: logging.c
src/utils/: exception.cc  ios_utils.mm  ios_utils_app.mm  port.c
src/vfs/: vfs.c  vfs_encrypted.cc  vfs_standard.c
tester/: CMakeLists.txt  bctoolbox_tester.c  containers.cc  crypto.cc  encrypted_vfs.cc  ios_utils.cc  param_string.c  parser.c  port.c  vfs.c
